--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<!-- 轮廓图片 -->
 								<div class="col-lg-12 col-md-12 col-sm-3 col-xs-12 ">
 									<div class="image-holder one" id="pic_prof_1" style="display:block">
-										<img class="head-image down-left circle" src="images/img/downleft.jpg" width="150" height="150" alt="" /> 
+										<img class="head-image down-left circle" src="images/img/downleft.png" width="150" height="150" alt="" /> 
 									</div>
 									<!-- 默认轮廓图片样式 -->
 									<div class="circle-img" id="pic_prof_2" style="display:none"></div>
@@ -206,7 +206,7 @@
 													</li>
 													<li>
 														<i class="glyphicon glyphicon-globe"></i>
-														<label>Website</label>
+														<label>Blog</label>
 														<span class="value"><a href="#" target="_blank">http://vernvn.github.io</a></span>
 														<div class="clear"></div>
 													</li>
@@ -1710,7 +1710,7 @@
 																<li><span class="span-info"><i class="glyphicon glyphicon-map-marker"></i> Adress:</span> 北京 , 昌平区<br /></li>
 																<li><span class="span-info"><i class="glyphicon glyphicon-envelope"></i> Email:</span> vernvn@hotmail.com</li>
 																<li><span class="span-info"><i class="glyphicon glyphicon-phone"></i> Phone:</span> 13930306924</li>
-																<li><span class="span-info"><i class="glyphicon glyphicon-globe"></i> Website:</span> vernvn.github.io</li>
+																<li><span class="span-info"><i class="glyphicon glyphicon-globe"></i> Blog:</span> vernvn.github.io</li>
 															</ul>
 														</div>
 														<!-- End .联系信息 -->
