--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<!-- 轮廓图片 -->
 								<div class="col-lg-12 col-md-12 col-sm-3 col-xs-12 ">
 									<div class="image-holder one" id="pic_prof_1" style="display:block">
-										<img class="head-image down-left circle" src="images/img/downleft.png" width="150" height="150" alt="" /> 
+										<img class="head-image down-left circle" src="images/img/1.png" width="150" height="150" alt="" /> 
 									</div>
 									<!-- 默认轮廓图片样式 -->
 									<div class="circle-img" id="pic_prof_2" style="display:none"></div>
